trying to change color

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1743,7 +1743,7 @@
   margin-left: 80px;
 }
 .tl-timegroup.tl-timegroup-alternate {
-  background-color: #fafafa;
+  background-color: #fc8d59;
 }
 .tl-timegroup.tl-timegroup-hidden {
   display: none;
