--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1261,7 +1261,7 @@
   bottom: 0px;
   height: 6px;
   width: 6px;
-  background-color: #919191;
+  background-color: #f1faee;
   z-index: 8;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1269,7 +1269,7 @@
 }
 .tl-timemarker .tl-timemarker-content-container {
   position: absolute;
-  background-color: #e5e5e5;
+  background-color: #e63946;
   border: 0;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
@@ -1743,7 +1743,7 @@
   margin-left: 80px;
 }
 .tl-timegroup.tl-timegroup-alternate {
-  background-color: #fc8d59;
+  background-color: #fafafa;
 }
 .tl-timegroup.tl-timegroup-hidden {
   display: none;
