--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1269,7 +1269,7 @@
 }
 .tl-timemarker .tl-timemarker-content-container {
   position: absolute;
-  background-color: #e63946;
+  background-color: #e5e5e5;
   border: 0;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
